--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/buyCar.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/svg/buyCar.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-commerce</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
